[Feat-NotificationService]: Add Notifications Service
