# back-end/api-gateway/docs/swagger.json
@@ -265,6 +265,204 @@
                 }
             }
         },
+        "/api/v1/notifications/get": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get Notification List w params",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "notification"
+                ],
+                "summary": "Get Notification",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "UserId Request",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseDataType"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseDataType"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseDataType"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/notifications/send": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Send Notification w body data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "notification"
+                ],
+                "summary": "Send Notification",
+                "parameters": [
+                    {
+                        "description": "Send Notify Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.SwaggerReqSendNotify"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseDataType"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseDataType"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseDataType"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/notifications/unread-count": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Count Unread Notification w Id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "notification"
+                ],
+                "summary": "Count Unread Notification",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "UserId Request",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseDataType"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseDataType"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseDataType"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/notifications/{id}/read": {
+            "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Update Read Status Notification w param Id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "notification"
+                ],
+                "summary": "Update Read Status Notification",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "NotifyId Request",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseDataType"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseDataType"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseDataType"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/post/add-post": {
             "post": {
                 "security": [
@@ -337,7 +535,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User Id",
+                        "description": "Post Id",
                         "name": "id",
                         "in": "query",
                         "required": true
@@ -670,13 +868,13 @@
         "models.CommentRequest": {
             "type": "object",
             "properties": {
-                "comment": {
+                "Comment": {
                     "type": "string"
                 },
-                "postId": {
+                "PostID": {
                     "type": "string"
                 },
-                "userId": {
+                "UserID": {
                     "type": "string"
                 }
             }
@@ -684,10 +882,10 @@
         "models.LikeRequest": {
             "type": "object",
             "properties": {
-                "postId": {
+                "PostID": {
                     "type": "string"
                 },
-                "userId": {
+                "UserID": {
                     "type": "string"
                 }
             }
@@ -729,13 +927,13 @@
         "models.PostMedia": {
             "type": "object",
             "properties": {
-                "postId": {
+                "PostID": {
                     "type": "string"
                 },
-                "type": {
+                "Type": {
                     "type": "string"
                 },
-                "url": {
+                "Url": {
                     "type": "string"
                 }
             }
@@ -743,32 +941,32 @@
         "models.PostResp": {
             "type": "object",
             "properties": {
-                "comments": {
+                "Author": {
+                    "$ref": "#/definitions/models.Users"
+                },
+                "Comments": {
                     "type": "integer"
                 },
-                "content": {
+                "Content": {
                     "type": "string"
                 },
-                "createdAt": {
+                "CreatedAt": {
                     "type": "string"
                 },
-                "likes": {
+                "Likes": {
                     "type": "integer"
                 },
-                "media": {
+                "Media": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.PostMedia"
                     }
                 },
-                "postId": {
+                "PostID": {
                     "type": "string"
                 },
-                "shares": {
+                "Shares": {
                     "type": "integer"
-                },
-                "userId": {
-                    "$ref": "#/definitions/models.Users"
                 }
             }
         },
@@ -833,11 +1031,11 @@
         "models.ResponseDataType": {
             "type": "object",
             "properties": {
-                "data": {},
-                "message": {
+                "Data": {},
+                "Message": {
                     "type": "string"
                 },
-                "statusCode": {
+                "StatusCode": {
                     "type": "integer"
                 }
             }
@@ -898,13 +1096,13 @@
         "models.SwaggerLikeResp": {
             "type": "object",
             "properties": {
-                "data": {
+                "Data": {
                     "type": "boolean"
                 },
-                "message": {
+                "Message": {
                     "type": "string"
                 },
-                "statusCode": {
+                "StatusCode": {
                     "type": "integer"
                 }
             }
@@ -947,13 +1145,13 @@
         "models.SwaggerLoginResp": {
             "type": "object",
             "properties": {
-                "data": {
+                "Data": {
                     "$ref": "#/definitions/models.LoginResp"
                 },
-                "message": {
+                "Message": {
                     "type": "string"
                 },
-                "statusCode": {
+                "StatusCode": {
                     "type": "integer"
                 }
             }
@@ -961,10 +1159,10 @@
         "models.SwaggerPostReq": {
             "type": "object",
             "properties": {
-                "content": {
+                "Content": {
                     "type": "string"
                 },
-                "userId": {
+                "UserID": {
                     "type": "string"
                 }
             }
@@ -972,30 +1170,50 @@
         "models.SwaggerPostResp": {
             "type": "object",
             "properties": {
-                "data": {
+                "Data": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.PostResp"
                     }
                 },
-                "message": {
+                "Message": {
                     "type": "string"
                 },
-                "statusCode": {
+                "StatusCode": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.SwaggerReqSendNotify": {
+            "type": "object",
+            "properties": {
+                "Messages": {
+                    "type": "string"
+                },
+                "ReceiverId": {
+                    "type": "string"
+                },
+                "SenderId": {
+                    "type": "string"
+                },
+                "Type": {
+                    "type": "string"
+                },
+                "Url": {
+                    "type": "string"
                 }
             }
         },
         "models.SwaggerUserResp": {
             "type": "object",
             "properties": {
-                "data": {
+                "Data": {
                     "$ref": "#/definitions/models.ResponseUser"
                 },
-                "message": {
+                "Message": {
                     "type": "string"
                 },
-                "statusCode": {
+                "StatusCode": {
                     "type": "integer"
                 }
             }
@@ -1003,13 +1221,13 @@
         "models.Users": {
             "type": "object",
             "properties": {
-                "ID": {
+                "FullName": {
                     "type": "string"
                 },
-                "fullName": {
+                "ProfilePicture": {
                     "type": "string"
                 },
-                "profilePicture": {
+                "UserID": {
                     "type": "string"
                 }
             }
